# velib-prediction

./: .gitignore  README.md  download_data_velib.sh  index.html  pyproject.toml  requirements.txt  session_store.db
.github/workflows/: code_quality.yml  hourly_dataset_download.yml  main.yml  publish-kedro-viz.yml  publish_kedro_viz  publish_kedro_viz.yml  ruff.yml
.viz/: stats.json
api/: deploy-viz-metadata  main
api/nodes/: 02e42ad9  06582374  06edc3c7  0c2685f9  1415fa0e  18daefd0  25f7cbf6  2993dc73  2b41488b  2da4a69e  30133633  37c30486  39334c6e  474b627d  4dc2f4c4  4e99f0b4  527460e7  53964f21  56c145db  5df40c6d  6026487d  605f518c  607883f9  60a585c4  665fd1ac  66f7e5fb  683185c6  696d6988  69f1a000  6f999313  71191bf1  72faa951  7bb1a830  7c8eb8e7  8b00ceb3  8c33edbe  8d7e10a1  97731a97  a11a3471  a1aacd5c  (+22 more)
api/pipelines/: __default__  data_engineering  download_data  feature_engineering  train_model
app/: main_page.py  predictions_to_plot.parquet  requirements.txt  station_locations.parquet
conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_download_data.yml  parameters_feature_engineering.yml  parameters_model_evaluation.yml  parameters_prepare_app.yml  parameters_train_model.yml
data/01_raw/: velib-disponibilite-en-temps-reel.parquet  velib_2024_10_19T16_12_14_282z.parquet  velib_2024_10_19T17_11_41_188z.parquet  velib_2024_10_19T18_15_02_973z.parquet  velib_2024_10_19T19_10_45_042z.parquet  velib_2024_10_19T20_12_28_942z.parquet  velib_2024_10_19T21_11_48_904z.parquet  velib_2024_10_19T22_12_24_379z.parquet  velib_2024_10_19T23_12_13_598z.parquet  velib_2024_10_20T01_01_10_463z.parquet  velib_2024_10_20T02_26_01_849z.parquet  velib_2024_10_20T03_23_03_810z.parquet  velib_2024_10_20T04_15_11_668z.parquet  velib_2024_10_20T05_11_57_356z.parquet  velib_2024_10_20T06_16_33_549z.parquet  velib_2024_10_20T07_11_49_281z.parquet  velib_2024_10_20T08_15_24_155z.parquet  velib_2024_10_20T09_12_38_781z.parquet  velib_2024_10_20T10_13_15_125z.parquet  velib_2024_10_20T11_10_55_102z.parquet  velib_2024_10_20T12_22_05_300z.parquet  velib_2024_10_20T13_18_05_871z.parquet  velib_2024_10_20T14_11_29_146z.parquet  velib_2024_10_20T15_11_47_550z.parquet  velib_2024_10_20T16_13_54_208z.parquet  velib_2024_10_20T17_11_57_127z.parquet  velib_2024_10_20T18_14_57_706z.parquet  velib_2024_10_20T19_09_35_719z.parquet  velib_2024_10_20T20_13_23_232z.parquet  velib_2024_10_20T21_11_32_958z.parquet  velib_2024_10_20T22_12_22_459z.parquet  velib_2024_10_20T23_12_40_823z.parquet  velib_2024_10_21T00_58_17_597z.parquet  (+1330 more)
download_data_auto/: download_data_velib.sh  upload_release.sh
downoad_data_auto/: fetch_data.py  script.sh
notebooks/: 1.0-create-data.ipynb  1.1-analyze-data.ipynb  1.2-download-data.ipynb  2-train-model.ipynb  2.1-ACF-and-PACF.ipynb  2.2-train-model.ipynb  2.3-train-model-bayesian-opti.ipynb  debug_feature_engineering.ipynb
static/css/: main.6cef851f.css
tests/: test_run.py
(+37 files in other folders)
