[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "velib_prediction"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
velib-prediction = "velib_prediction.__main__:main"

[tool.kedro]
package_name = "velib_prediction"
project_name = "velib-prediction"
kedro_init_version = "0.19.7"
tools = [ "Linting", "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/velib_prediction -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "velib_prediction.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "991802f39bf146bcbe6ee3fbe0a28b4e"
