[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "velib_prediction"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "catboost>=1.2.7",
    "geopandas>=1.0.1",
    "kedro-datasets>=5.1.0",
    "kedro>=0.19.10",
    "pandas>=2.2.3",
    "kedro-viz>=10.1.0",
    "ipython>=8.30.0",
    "jupyterlab>=4.3.2",
    "mlflow>=2.18.0",
    "optuna>=4.1.0",
    "statsmodels>=0.14.4",
    "pyarrow>=18.1.0",
    "notebook>=7.0.7",
]

[project.scripts]
velib-prediction = "velib_prediction.__main__:main"

[tool.kedro]
package_name = "velib_prediction"
project_name = "velib-prediction"
kedro_init_version = "0.19.7"
tools = [ "Linting", "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
lint.ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/velib_prediction -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "velib_prediction.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "991802f39bf146bcbe6ee3fbe0a28b4e"
